# rusty-planner

./: Cargo.toml  README.md
public/: 404.html  index.html
public/src/: global.css  index.css  rusty.js
scripts/: database.sql
src/: main.rs
src/api/: database.rs  discord.rs  error.rs  mod.rs  response.rs  types.rs
