[package]
name = "rusty-planner"
version = "0.1.0"
authors = ["Douile <25043847+Douile@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix-web]
version = "^3.3"

[dependencies.actix-files]
version = "^0.5"

[dependencies.postgres]
version = "^0.19"
features = ["with-uuid-0_8", "with-serde_json-1"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0"

[dependencies.serde_urlencoded]
version = "^0.7"

[dependencies.env_logger]
version = "^0.8"

[dependencies.reqwest]
version = "^0.10"
features = ["json","gzip"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]
